--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "koa-ejs": "^4.3.0",
     "koa-json": "^2.0.2",
     "koa-router": "^10.1.1",
-    "koa-static": "^5.0.0"
+    "koa-static": "^5.0.0",
+    "pg": "^8.7.3"
   },
   "name": "bookshelf-app",
   "version": "1.0.0",
